Fix certificat manquant

--- a/inscriptions/templates/admin/dashboard.html
+++ b/inscriptions/templates/admin/dashboard.html
@@ -31,23 +31,22 @@ location.href = "choose/";
                 <th>Dossiers</th>
                 <td>
                     <a href="inscriptions/equipe/?status=complet">
-                        <img alt="None" src="/static/admin/img/icon-yes.gif">
-                        Complets
+                        ✅ Complets
                     </a>
                 </th>
                 <td>
-                    <a href="inscriptions/equipe/?status=incomplet">Incomplets</a>
+                    <a href="inscriptions/equipe/?status=incomplet">
+                        ✉ Incomplets
+                    </a>
                 </th>
                 <td>
                     <a href="inscriptions/equipe/?status=erreur">
-                        <img alt="None" src="/static/admin/img/icon-no.gif">
-                        En Erreurs
+                        ❎ En Erreurs
                     </a>
                 </th>
                 <td>
                     <a href="inscriptions/equipe/?status=verifier">
-                        <img alt="None" src="/static/admin/img/icon-unknown.gif">
-                        A vérifier
+                        ❔A vérifier
                     </a>
                 </th>
             </tr>
