--- a/inscriptions/templates/done.html
+++ b/inscriptions/templates/done.html
@@ -110,6 +110,8 @@
                 </ul>
             </div>
             {% endif %}
+
+            {% if instance.certificat_manquantes %}
             <div class="clearfix">
                 {% blocktrans %}Il manque les certificats médicaux de (<a href="http://www.6hdeparis.fr/wp-content/uploads/2013/03/certificat_medical.pdf" target="_blank">modèle</a>):{% endblocktrans %}<ul>
                 {% for e in instance.certificat_manquantes %}
