--- a/inscriptions/templates/admin/base_site.html
+++ b/inscriptions/templates/admin/base_site.html
@@ -3,7 +3,11 @@
 
 {% block extrahead %}
     <script>
+        {% if request.user.is_superuser %}
+var COURSES_UID = false;
+        {% else %}
 var COURSES_UID = [{% for a in request.user.accreditations.all %}{% if a.role %}"{{ a.course.uid }}"{% if not forloop.last %},{% endif %}{% endif %}{% endfor %}];
+        {% endif %}
 var COURSE_UID = "{{ COURSE.uid }}";
     </script>
     <script src="{{ STATIC_URL }}/admin/js/vendor/jquery/jquery.js"></script>
