--- a/inscriptions/templates/_participation.html
+++ b/inscriptions/templates/_participation.html
@@ -19,7 +19,7 @@
                     {% if course != COURSE %}
                     <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                         <div class="thumbnail">
-                            <span class="hidden-xs" style="background: url({{ MEDIA_URL }}{{ course.logo }}) no-repeat 50% 50%; background-size: contain; height: 200px; width: 100%; display: block"></a>
+                            <span class="hidden-xs" style="background: url({{ MEDIA_URL }}{{ course.logo }}) no-repeat 50% 50%; background-size: contain; height: 200px; width: 100%; display: block"></span>
                             <div class="caption">
                                 <h3>{{ course.nom }}</h3>
                                 <p>
