--- a/inscriptions/templates/admin/dashboard.html
+++ b/inscriptions/templates/admin/dashboard.html
@@ -126,6 +126,10 @@ location.href = "choose/";
                         <i class="fa fa-check-circle"></i><br />
                         <label>{% blocktrans %}Documents à vérifier{% endblocktrans %}</a>
                     </a>
+                    <a href="inscriptions/paiement/">
+                        <i class="fa fa-eur"></i><br />
+                        <label>{% blocktrans %}Paiements{% endblocktrans %}</a>
+                    </a>
                     <a href="/{{ COURSE.uid }}/stats/">
                         <i class="fa fa-line-chart"></i><br />
                         <label>{% blocktrans %}Statistiques{% endblocktrans %}</a>
