--- a/inscriptions/templates/stats.html
+++ b/inscriptions/templates/stats.html
@@ -5,9 +5,9 @@
 
 {% block body %}
 {% if stats.course.equipiers %}
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.css" />
     <!--[if lte IE 8]>
-        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.ie.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.ie.css" />
     <![endif]-->
     <style>
         table, td, th { border: 1px solid grey; }
@@ -203,7 +203,7 @@
     {% endif %}
 
 
-    <script src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.5/leaflet.js"></script>
     <script src="{{ STATIC_URL }}/js-class.js"></script>
     <script src="{{ STATIC_URL }}/bluff-src.js"></script>
 
