--- a/inscriptions/templates/resultats_challenge.html
+++ b/inscriptions/templates/resultats_challenge.html
@@ -76,7 +76,7 @@
                         <tr>
                             <th>{{ e.prenom }} {{ e.nom }}</th>
                             {% for c in challenge.courses.all %}
-                            {% if c in e.courses %}<td class=&quot;bg-success&quot;>{% cycle "1" "2" "3" "4" "5" "6" "7" "8" "9" "10" %}</td>
+                            {% if c in e.courses %}<td class=&quot;{% cycle "bg-info" "bg-success" "bg-success" "bg-success" "bg-success" "bg-success" "bg-success" "bg-success" "bg-success" "bg-success" %}&quot;></td>
                             {% else %}<td></td>
                             {% endif %}{% endfor %}{% resetcycle %}
                         </tr>{% endfor %}
