--- a/inscriptions/templates/participation_challenge.html
+++ b/inscriptions/templates/participation_challenge.html
@@ -79,7 +79,7 @@
             <tr>
                 <th>{{ e.prenom }} {{ e.nom }}</th>
                 {% for c in challenge.courses.all %}
-                {% if c in e.courses %}<td class="bg-success">{% cycle "1" "2" "3" "4" "5" "6" "7" "8" "9" "10" %}</td>
+                {% if c in e.courses %}<td class="{% cycle "bg-info" "bg-success" "bg-success" "bg-success" "bg-success" "bg-success" "bg-success" "bg-success" "bg-success" "10" %}"></td>
                 {% else %}<td></td>
                 {% endif %}{% endfor %}{% resetcycle %}
             </tr>{% endfor %}
