--- a/inscriptions/templates/admin/dashboard.html
+++ b/inscriptions/templates/admin/dashboard.html
@@ -41,7 +41,7 @@ location.href = "choose/";
                 </th>
                 <td>
                     <a href="inscriptions/equipe/?status=erreur">
-                        ❎ En Erreurs
+                        🚫 En Erreurs
                     </a>
                 </th>
                 <td>
