--- a/inscriptions/templates/_list_filter.html
+++ b/inscriptions/templates/_list_filter.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Categories" %} <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Categories" %} {% if request.GET.categorie %}<strong>{{ request.GET.categorie }}</strong>{% endif %}<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a data-name="by_categories" data-value="{% if request.GET.by_categories == "1" %}">{% trans "Regrouper les catégories" %}{% else %}1">{% trans "Séparer les catégories" %}{% endif %}</a></li>
             <li><a data-name="categorie" data-value="">{% if request.GET.categorie == "" %}<strong>{% endif %}{% trans "Toutes" %}{% if request.GET.categorie == "" %}</strong>{% endif %}</a></li>
@@ -27,7 +27,7 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Top" %} <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Top" %} {% if request.GET.top %}<strong>{{ request.GET.top }}</strong>{% endif %}<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a data-name="top" data-value="">{% if request.GET.top == "" %}<strong>{% endif %}{% trans "Tous" %}{% if request.GET.top == "" %}</strong>{% endif %}</a></li>
             <li><a data-name="top" data-value="1">{% if request.GET.top == "1" %}<strong>{% endif %}{% trans "Top 1" %}{% if request.GET.top == "1" %}</strong>{% endif %}</a></li>
